hphp/hack/test/typecheck/aktuple/local_vs_nested.php.legacy.exp
File "local_vs_nested.php", line 11, characters 15-19:
Invalid argument (Typing[4110])
File "local_vs_nested.php", line 20, characters 22-27:
This is a string
File "local_vs_nested.php", line 8, characters 14-14:
It is incompatible with an int
